--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -25,7 +25,7 @@
                             <h:outputLabel for="entrada" value="Entrada:" />
                             <div class="ui-inputgroup clockpicker" data-placement="left" data-align="top" data-autoclose="true">
                                 <form>
-                                    <p:inputText maxlength="5" id="entrada" type="text" class="w-100" value="#{ControlePontoMB.horarioTrabalho.entrada}" />
+                                    <p:inputMask  maxlength="5" id="entrada" type="text" styleClass="form-control w-100" value="#{ControlePontoMB.horarioTrabalho.entrada}" mask="99:99"/>
                                 </form>
                             </div>
                         </div>
@@ -33,16 +33,16 @@
                         <div class="col-12 col-md-3 mb-3">
                             <h:outputLabel for="saida" value="Saída:" />
                             <div class="ui-inputgroup clockpicker" data-placement="right" data-align="top" data-autoclose="true">
-                                <p:inputText maxlength="5" id="saida" type="text" class="form-control w-100" value="#{ControlePontoMB.horarioTrabalho.saida}" />
+                                <p:inputMask  maxlength="5" id="saida" type="text" styleClass="form-control w-100" value="#{ControlePontoMB.horarioTrabalho.saida}" mask="99:99"/>
                             </div>
                         </div>
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <p:commandButton value="Cadastrar" styleClass="justify-content-center" action="#{ControlePontoMB.salvar()}"  oncomplete="executarClockpickerScript();"/>
+                        <p:commandButton value="Cadastrar" styleClass="justify-content-center" action="#{ControlePontoMB.salvarHorarioDetrabalho()}" oncomplete="executarClockpickerScript();"/>
                     </div>
                 </p:panel>
-                <p:panel styleClass="container w-50 py-4">
+                <p:panel styleClass="container py-4" style="width: 40%" >
                     <p:dataTable value="#{ControlePontoMB.controlePontoHBDAO.listaHorarioTrablho}" var="litaHorarioTrabalho">
                         <p:column headerText="Entrada" styleClass="col-12 col-md-3 mb-3 w-50">
                             <h:outputText value="#{litaHorarioTrabalho.entrada}"/>
@@ -66,7 +66,7 @@
                             <h:outputLabel for="entrada-marcacao" value="Entrada:" />
                             <div class="ui-inputgroup clockpicker" data-placement="left" data-align="top" data-autoclose="true">
                                 <form>
-                                    <p:inputText maxlength="5" id="entrada-marcacao" type="text" class="w-100" value="#{ControlePontoMB.horarioTrabalho.entrada}" />
+                                    <p:inputMask  maxlength="5" id="entrada-marcacao" type="text" styleClass="form-control w-100" value="#{ControlePontoMB.marcacaoFeita.entrada}" mask="99:99"/>
                                 </form>
                             </div>
                         </div>
@@ -74,22 +74,22 @@
                         <div class="col-12 col-md-3 mb-3">
                             <h:outputLabel for="saida-marcacao" value="Saída:" />
                             <div class="ui-inputgroup clockpicker" data-placement="right" data-align="top" data-autoclose="true">
-                                <p:inputText maxlength="5" id="saida-marcacao" type="text" class="form-control w-100" value="#{ControlePontoMB.horarioTrabalho.saida}" />
+                                <p:inputMask maxlength="5" id="saida-marcacao" type="text" class="form-control w-100" value="#{ControlePontoMB.marcacaoFeita.saida}" mask="99:99" />
                             </div>
                         </div>
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <p:commandButton value="Cadastrar" styleClass="justify-content-center" action="#{ControlePontoMB.salvar()}"  oncomplete="executarClockpickerScript();"/>
+                        <p:commandButton value="Cadastrar" styleClass="justify-content-center" action="#{ControlePontoMB.salvarMarcacaoFeita()}" oncomplete="executarClockpickerScript();"/>
                     </div>
                 </p:panel>
-                <p:panel styleClass="container w-50 py-4">
-                    <p:dataTable value="#{ControlePontoMB.controlePontoHBDAO.listaHorarioTrablho}" var="litaHorarioTrabalho">
+                <p:panel styleClass="container py-4" style="width: 40%">
+                    <p:dataTable value="#{ControlePontoMB.controlePontoHBDAO.listaHorarioMarcacao}" var="listaHorarioMarcacao">
                         <p:column headerText="Entrada" styleClass="col-12 col-md-3 mb-3 w-50">
-                            <h:outputText value="#{litaHorarioTrabalho.entrada}"/>
+                            <h:outputText value="#{listaHorarioMarcacao.entrada}"/>
                         </p:column>
                         <p:column headerText="Saída" styleClass="col-12 col-md-3 mb-3 w-50">
-                            <h:outputText value="#{litaHorarioTrabalho.saida}"/>
+                            <h:outputText value="#{listaHorarioMarcacao.saida}"/>
                         </p:column>
                     </p:dataTable>
                 </p:panel>
